[gd_scene load_steps=5 format=3 uid="uid://nwqxp8pdh1jk"]

[ext_resource type="Script" uid="uid://dfhhqtggrxygb" path="res://scenes/menu/char_select_button.gd" id="1_86waj"]
[ext_resource type="Texture2D" uid="uid://ded5jrn5yju2j" path="res://assets/cards/card_border_highlight_pressed.png" id="1_rxwf8"]
[ext_resource type="Texture2D" uid="uid://mn1hj4i3k7l7" path="res://assets/cards/card_border_highlight_selected.png" id="2_ygb6l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fbk5y"]

[node name="CharSelectbutton" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_fbk5y")
script = ExtResource("1_86waj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Button" type="TextureButton" parent="."]
layout_mode = 2
texture_pressed = ExtResource("1_rxwf8")
texture_hover = ExtResource("2_ygb6l")
ignore_texture_size = true
stretch_mode = 0

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Portrait" type="TextureRect" parent="Margin"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
mouse_filter = 2
expand_mode = 5

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
